<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#2D2727"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alatsi"
        android:text="Életbiztosítás"
        android:textAlignment="center"
        android:textColor="#F0EB8D"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:fontFamily="@font/alatsi"
        android:textColor="#F0EB8D"
        android:backgroundTint="#F0EB8D"
        android:textColorHint="#F0EB8D"
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:fontFamily="@font/alatsi"
        android:textColor="@color/light"
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:backgroundTint="#F0EB8D"
        android:textColorHint="#F0EB8D"
        android:minHeight="48dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        android:inputType="textPassword"/>

    <Button
        android:fontFamily="@font/alatsi"
        android:textSize="18sp"
        android:backgroundTint="#F0EB8D"
        android:textColor="#2D2727"
        android:onClick="login"
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:fontFamily="@font/alatsi"
        android:onClick="loginAsGuest"
    android:id="@+id/guestLogin"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/guestLogin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/login"
        android:layout_marginTop="20dp"
        android:backgroundTint="#F0EB8D"
        android:textColor="#2D2727"
        android:textSize="18sp"
        android:layout_marginHorizontal="20dp"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:fontFamily="@font/alatsi"
        android:onClick="register"
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestLogin"
        android:layout_marginTop="20dp"
        android:backgroundTint="#F0EB8D"
        android:textColor="#2D2727"
        android:textSize="18sp"
        android:layout_marginHorizontal="20dp"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>